--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,7 +147,7 @@ nav .nav-num .whatsapp {
 
 /* Start Hero */
 .header {
-	background: url(../img/hero-bg.jpg);
+	background: url(../img/hero-bg.png);
 	height: 800px;
 	width: 100%;
 	background-size: cover;
