--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,7 @@ nav {
 	align-items: center;
 	z-index: 999;
 	padding: 0;
+	position: fixed;
 }
 
 nav .container {
@@ -334,3 +335,239 @@ header .container button span {
 	color: #fff;
 }
 /* End glider carousel */
+
+/* Start Apartments */
+.apartments {
+	margin: 3rem 0;
+	background-color: #222;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.apartments .heading h3 {
+	color: #fff;
+	font-size: 30px;
+	text-align: center;
+	position: relative;
+}
+
+.apartments .heading::after {
+	content: '';
+	width: 80px;
+	height: 4px;
+	border-radius: 20px;
+	background-color: #14f30f;
+	position: absolute;
+	left: 50%;
+	right: 50%;
+	transform: translate(-50%, -50%);
+}
+
+.apartments .category-list {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.apartments .category-list ul {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	list-style-type: none;
+	margin: 30px 0 20px;
+}
+
+.apartments .category-list ul li {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 7px 8px;
+	color: #fff;
+	border: 1px solid #fff;
+	border-radius: 20px;
+	margin: 0 10px;
+	cursor: pointer;
+}
+
+.apartments .category-list ul li i {
+	padding: 0 10px 0 0;
+}
+
+.apartments .category-list ul li p {
+	margin-bottom: 0;
+}
+
+.apartments .category-list ul li:hover,
+.apartments .category-list ul li.active {
+	background-color: #17c0cb;
+	border-color: #17c0cb;
+}
+
+.category-items {
+	margin: 30px;
+}
+
+.category-items .item {
+	display: flex;
+}
+
+.category-items .item .img-container {
+	width: 300px;
+	height: 208px;
+}
+
+.category-items
+	.item
+	.img-container
+	.glider-contain
+	.glider
+	.img-container
+	img {
+	width: 100%;
+	height: 100%;
+}
+
+.category-items .item .img-container .glider-contain .glider .img-container,
+.glider-contain {
+	padding: 0;
+}
+
+.glider-contain .glider-cont-prev2 {
+	outline: none;
+	position: absolute;
+	left: 10px;
+	top: 50%;
+	color: #fff;
+	z-index: 2;
+	background-color: transparent;
+	border: none;
+	padding: 10px;
+	transform: translateY(-50%);
+}
+
+.glider-contain .glider-cont-next2 {
+	outline: none;
+	position: absolute;
+	right: 10px;
+	top: 50%;
+	color: #fff;
+	background-color: transparent;
+	border: none;
+	padding: 10px;
+	transform: translateY(-50%);
+}
+
+.glider-dots {
+	position: absolute;
+	bottom: 0;
+	left: 50%;
+	transform: translate(-50%);
+}
+
+.category-items .item {
+	height: 100%;
+	overflow: hidden;
+	background-color: #333;
+	border-radius: 25px;
+	margin-bottom: 20px;
+}
+
+.category-items .item p {
+	padding: 0;
+}
+
+.category-items .item .item-desc {
+	color: #fff;
+	margin-left: 20px;
+}
+
+.category-items .item .item-desc h4 {
+	font-size: 1.3rem;
+	padding-left: 8px;
+}
+
+.category-items .item .item-desc h5 {
+	padding-left: 8px;
+	padding-top: 5px;
+}
+
+.category-items .item .item-desc .info {
+	display: flex;
+	padding: 0;
+}
+
+.category-items .item .item-desc .info .rooms {
+	display: flex;
+	padding: 10px 0;
+}
+
+.category-items .item .item-desc .info .rooms p {
+	padding-bottom: 0;
+}
+
+.category-items .item .item-desc .info .rooms i {
+	padding: 4px 9px;
+}
+
+.category-items .item .item-desc .info .baths {
+	display: flex;
+	padding: 10px;
+}
+
+.category-items .item .item-desc .info .baths p {
+	padding-bottom: 0;
+}
+
+.category-items .item .item-desc .info .baths i {
+	padding: 4px 9px;
+}
+
+.category-items .item .item-desc .info .size {
+	display: flex;
+	padding: 10px;
+}
+
+.category-items .item .item-desc .info .size p {
+	padding-bottom: 0;
+}
+
+.category-items .item .item-desc .info .size i {
+	padding: 4px 9px;
+}
+
+.category-items .item .item-desc .location {
+	display: flex;
+}
+
+.category-items .item .item-desc .location i {
+	padding: 4px 9px;
+}
+
+.category-items .item .item-desc .location p {
+	padding: 0.5s;
+}
+
+.category-items .item .item-desc .buttons {
+	display: flex;
+	justify-content: space-between;
+	padding-left: 8px;
+}
+
+.category-items .item .item-desc .buttons .watch {
+	border: 1px solid #ff0000;
+	outline: none;
+	background-color: transparent;
+	color: #ff0000;
+	padding: 4px 8px;
+}
+.category-items .item .item-desc .buttons .call {
+	border: none;
+	outline: none;
+	background-color: #14f30f;
+	color: #fff;
+	padding: 4px 13px;
+}
+
+/* End Apartments */
