--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -319,13 +319,19 @@ header .container button span {
 /* Start Responsive About */
 @media screen and (max-width: 767px) {
 	.about {
-		height: 800px;
+		height: 700px;
 	}
 	.about .row .images {
 		top: 50px;
 	}
 	.about .row .images img {
 		width: 100%;
+	}
+	.d-sm-none {
+		display: none;
+	}
+	.about .row .images img:nth-of-type(3) {
+		right: 0;
 	}
 }
 
@@ -397,6 +403,7 @@ header .container button span {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	flex-wrap: wrap;
 	list-style-type: none;
 	margin: 30px 0 20px;
 }
@@ -597,6 +604,33 @@ header .container button span {
 	border-radius: 20px;
 }
 
+@media screen and (max-width: 767px) {
+	.apartments .category-list ul li,
+	.villas .category-list ul li {
+		margin-bottom: 10px;
+	}
+	.category-items .item {
+		flex-direction: column;
+		height: 100%;
+	}
+	.category-items .item .img-container {
+		width: 100%;
+	}
+	.category-items .item .item-desc {
+		margin: 0;
+		padding: 10px;
+	}
+	.category-items .item .item-desc .info {
+		font-size: 12px;
+	}
+	.category-items .item .item-desc .info .size i {
+		padding: 4px 6px;
+	}
+	.category-items .item .item-desc .buttons .call {
+		margin: 0;
+	}
+}
+
 /* End Apartments */
 
 /* Start Location */
@@ -635,6 +669,12 @@ header .container button span {
 	align-items: center;
 	width: 100%;
 	height: 100%;
+}
+
+@media screen and (max-width: 767px){
+	.locationSec .img-wrapper img{
+		width: 100%;
+		
 }
 
 /* End Location */
