--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,7 +119,7 @@ nav .nav-num .whatsapp {
 	nav .nav-menu {
 		padding-top: 50px;
 		width: 100%;
-		height: calc(100vh - 60px);
+		height: 90vh;
 		position: absolute;
 		top: 60px;
 		left: -100%;
@@ -315,6 +315,9 @@ header .container button span {
 	top: 0;
 	right: 70px;
 }
+.dsm0 {
+	opacity: 1;
+}
 
 /* Start Responsive About */
 @media screen and (max-width: 767px) {
@@ -327,8 +330,8 @@ header .container button span {
 	.about .row .images img {
 		width: 100%;
 	}
-	.d-sm-none {
-		display: none;
+	.dsm0 {
+		opacity: 0;
 	}
 	.about .row .images img:nth-of-type(3) {
 		right: 0;
@@ -474,8 +477,10 @@ header .container button span {
 	z-index: 2;
 	background-color: transparent;
 	border: none;
-	padding: 10px;
 	transform: translateY(-50%);
+	background-color: #00000085;
+	padding: 6px 6px;
+	border-radius: 20px;
 }
 
 .glider-contain .glider-cont-next2 {
@@ -486,8 +491,10 @@ header .container button span {
 	color: #fff;
 	background-color: transparent;
 	border: none;
-	padding: 10px;
 	transform: translateY(-50%);
+	background-color: #00000085;
+	padding: 6px 6px;
+	border-radius: 20px;
 }
 
 .glider-dots {
@@ -513,6 +520,7 @@ header .container button span {
 	color: #fff;
 	margin-left: 20px;
 	width: 100%;
+	padding: 18px 0;
 }
 
 .category-items .item .item-desc h4 {
@@ -585,6 +593,7 @@ header .container button span {
 	display: flex;
 	justify-content: space-between;
 	padding-left: 8px;
+	margin: 8px 0;
 }
 
 .category-items .item .item-desc .buttons .watch {
@@ -604,6 +613,7 @@ header .container button span {
 	border-radius: 20px;
 }
 
+/* Start Resonsive Appartment and Villa */
 @media screen and (max-width: 767px) {
 	.apartments .category-list ul li,
 	.villas .category-list ul li {
@@ -671,10 +681,10 @@ header .container button span {
 	height: 100%;
 }
 
-@media screen and (max-width: 767px){
-	.locationSec .img-wrapper img{
+@media screen and (max-width: 767px) {
+	.locationSec .img-wrapper img {
 		width: 100%;
-		
+	}
 }
 
 /* End Location */
